# EndoNeuro-dsPIC

./: .gitignore  README.md
Documentation/: Chronic Rpi Quick start guide.docx  documentation.md
endoNeuro-dspic.X/: buffer.c  buffer.h  hardConfig.c  hardConfig.h  main.c  spiAdc.c  spiAdc.h  spiRpi.c  spiRpi.h  traps.c
endoNeuro-dspic.X/nbproject/: configurations.xml  project.xml
endoneuro-Rpi/: .gitignore  CMakeLists.txt  CMakeLists.txt.bak
endoneuro-Rpi/install/: Configuration de l'adresse IP.txt  Installation.md  Nouveau document texte.txt  config.sh  install.md
endoneuro-Rpi/neuropv/: CMakeLists.txt  Installation.md  README.md
endoneuro-Rpi/neuropv/scripts/: run.sh
endoneuro-Rpi/neuropv/src/: main.cpp
endoneuro-Rpi/neuropv/src/collection/: acquisition.cpp  acquisition.h  acquisitionFiles.cpp  acquisitionFiles.h  lockingQueue.cpp  lockingQueue.h  utils.cpp  utils.h  video.cpp  video.h
endoneuro-Rpi/scripts/: debug.sh
endoneuro-Rpi/src/: main.cpp
endoneuro-Rpi/src/collection/: acquisition.cpp  acquisition.h  acquisitionFiles.cpp  acquisitionFiles.h  lockingQueue.cpp  lockingQueue.h  transfer.cpp  transfer.h  utils.cpp  utils.h  video.cpp  video.h
endoneuro-Rpi/src/libs/: Spi.cpp  Spi.h  raspicamConfig.cmake  raspicam_image.ppm  raspicam_still_cv.h
endoneuro-Rpi/tools/: RPI.cpp  RPI.h  bcm_gpio_test.cpp  file_checker.py  monit.sh  register_test.cpp
